src/test/deca/syntax/invalid/double_protected.deca
// Description:
// 	protected deux fois
//
// Result:
//  extraneous input 'protected' expecting IDENT

class A {
	protected protected int i;	
}
